# cli-tools

./: Cargo.toml  README.md
src/: args.rs  lib.rs  process.rs  utils.rs
tests/: cat.rs  cli_tools.rs  echo.rs  false.rs  head.rs  hello.rs  true.rs
tests/expected/: cat.sh  echo.sh  head.sh
tests/scripts/: echo.sh
tests/utils/: consts.rs  mod.rs
