[package]
name = "cli-tools"
version = "0.1.0"
edition = "2021"
authors = ["Han-Seong Kwon <hansung080@hanmail.net>"]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.0"
